@@ -1,5 +1,4 @@
-package com.iis.foodflow.service;
-
+package com.iis.foodflow.service;// ... imports
 import com.fasterxml.jackson.databind.JsonNode;
 import com.iis.foodflow.model.support.ProblemCategory;
 import com.iis.foodflow.repository.ProblemCategoryRepository;
@@ -9,64 +8,56 @@ import org.springframework.web.client.RestTemplate;
 import org.springframework.http.HttpEntity;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.MediaType;
-
-import java.util.List;
+// NOVI import
+import java.util.Collections;
 import java.util.Map;
-import java.util.stream.Collectors;
+import java.util.Optional; // Koristićemo Optional za bolju praksu
+
 
 @Service
 @RequiredArgsConstructor
 public class NlpService {
 
     private final ProblemCategoryRepository categoryRepository;
-    private final RestTemplate restTemplate; // Ubacujemo RestTemplate
+    private final RestTemplate restTemplate;
 
-    // URL našeg Python NLP mikroservisa
     private final String nlpServiceUrl = "http://localhost:5000/categorize";
 
     public ProblemCategory categorizeProblem(String description) {
-        // 1. Dohvatamo sve moguće sub-kategorije iz baze
-        List<ProblemCategory> allSubCategories = categoryRepository.findAllByParentCategoryIsNotNull();
-        List<String> categoryNames = allSubCategories.stream()
-                .map(ProblemCategory::getName)
-                .collect(Collectors.toList());
-
-        // 2. Pripremamo telo (body) zahteva za Python servis
         HttpHeaders headers = new HttpHeaders();
         headers.setContentType(MediaType.APPLICATION_JSON);
-        Map<String, Object> requestBody = Map.of(
-                "text", description,
-                "categories", categoryNames
-        );
-        HttpEntity<Map<String, Object>> entity = new HttpEntity<>(requestBody, headers);
+
+        // TELO ZAHTEVA JE SADA MNOGO JEDNOSTAVNIJE
+        // Šaljemo samo tekst, bez liste kategorija
+        Map<String, String> requestBody = Collections.singletonMap("text", description);
+
+        HttpEntity<Map<String, String>> entity = new HttpEntity<>(requestBody, headers);
 
         try {
-            // 3. Šaljemo POST zahtev Python servisu
             JsonNode response = restTemplate.postForObject(nlpServiceUrl, entity, JsonNode.class);
 
             if (response != null && response.has("category")) {
                 String categorizedName = response.get("category").asText();
 
-                if ("Other".equalsIgnoreCase(categorizedName)) {
-                    return getOtherCategory();
-                }
+                // Pronalazimo kategoriju u bazi po imenu koje je vratio model
+                Optional<ProblemCategory> foundCategory = categoryRepository.findByName(categorizedName);
 
-                // 4. Pronalazimo kategoriju u bazi na osnovu imena koje je vratio NLP
-                return allSubCategories.stream()
-                        .filter(cat -> cat.getName().equalsIgnoreCase(categorizedName))
-                        .findFirst()
-                        .orElse(getOtherCategory()); // Fallback ako se nešto desi
+                // Vraćamo pronađenu kategoriju, ili "Other" ako ne postoji u bazi
+                return foundCategory.orElse(getOtherCategory());
             }
         } catch (Exception e) {
-            // Ako Python servis nije dostupan ili dođe do greške, vraćamo "Other"
             System.err.println("Error calling NLP service: " + e.getMessage());
+            // U slučaju greške, vraćamo "Other"
             return getOtherCategory();
         }
 
+        // Default fallback
         return getOtherCategory();
     }
 
     private ProblemCategory getOtherCategory() {
-        return categoryRepository.findById(4L).orElseThrow(() -> new RuntimeException("Other category not found!"));
+        // Možete koristiti findByName i za "Other" da bude konzistentno
+        return categoryRepository.findByName("Other")
+                .orElseThrow(() -> new RuntimeException("Default 'Other' category not found in the database!"));
     }
 }
